<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">Social Media Management</string>
    <string name="facebook_app_id">660356307966974</string>
    <string name="fb_login_protocol_scheme">fb660356307966974</string>
    <string name="profile_image">Profile Image</string>
    <string name="profile_name">Name</string>
    <string name="profile_email">abc@xyz.com</string>

    <string name="copyright_text">©2019 Aritra Nath</string>
    <string name="btn_logout">Logout from App</string>

    <string name="com.twitter.sdk.android.CONSUMER_KEY">G3Ynund8fuJoerlZi2VoK0Quk</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">H59XJYNfalKEN8m8HNcORaI4HyHhSVgFUrjaYM70CBuuo0rmro</string>
    <string name="twitter_token">AAAAAAAAAAAAAAAAAAAAAE5iKQEAAAAAsSv5RXPWhunH3gIdPYydPiO%2FyRw%3DOl8lJSqTuZNblWupOKZOgeQRQUGOTwseHuU1t5XWMX0DpKqfjM</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>